remove and reimplement recursive-readdir package

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -799,6 +799,10 @@
       "allowedCategories": [ "frontend" ]
     },
     {
+      "name": "minimatch",
+      "allowedCategories": [ "tools" ]
+    },
+    {
       "name": "mkdirp",
       "allowedCategories": [ "internal" ]
     },
