use the machine with more ram

--- a/common/config/azure-pipelines/helgrind.yaml
+++ b/common/config/azure-pipelines/helgrind.yaml
@@ -24,6 +24,7 @@ jobs:
       name: iModelTechCI
       demands:
       - Agent.OS -equals Linux
+      - Agent.Name -equals BuildLinuxMinion01-A
     variables:
       HELGRIND_RESULTS: $(Build.StagingDirectory)/helgrind-results/
     workspace:
