--- a/common/config/azure-pipelines/helgrind.yaml
+++ b/common/config/azure-pipelines/helgrind.yaml
@@ -67,7 +67,7 @@ jobs:
 
       - script: |
           free -m
-          valgrind --tool=helgrind --suppressions=$(Agent.BuildDirectory)/s/common/config/azure-pipelines/helgrind.supp --gen-suppressions=all --trace-children=yes npm test |& tee $(HELGRIND_RESULTS)helgrind$(Build.BuildId).txt
+          valgrind --tool=helgrind --suppressions=$(Agent.BuildDirectory)/s/common/config/azure-pipelines/helgrind.supp --gen-suppressions=all --trace-children=yes npm test |& tee $(HELGRIND_RESULTS)helgrind$(Build.BuildId).txt'
         displayName: "Run Valgrind's datarace detector (helgrind) on core-backend tests"
         failOnStderr: false
         workingDirectory: $(Agent.BuildDirectory)/s/core/backend
