bring back top after OOM

--- a/common/config/azure-pipelines/helgrind.yaml
+++ b/common/config/azure-pipelines/helgrind.yaml
@@ -68,7 +68,7 @@ jobs:
       - script: |
           free -m
           LINES=20 top -b -d 2 -w > $(HELGRIND_RESULTS)/top.log &
-          valgrind --tool=helgrind --suppressions=$(Agent.BuildDirectory)/s/common/config/azure-pipelines/helgrind.supp --gen-suppressions=all --trace-children=yes npm test |& tee $(HELGRIND_RESULTS)helgrind$(Build.BuildId).txt'
+          valgrind --tool=helgrind --suppressions=$(Agent.BuildDirectory)/s/common/config/azure-pipelines/helgrind.supp --gen-suppressions=all --trace-children=yes npm test |& tee $(HELGRIND_RESULTS)helgrind$(Build.BuildId).txt
           kill $(jobs -p)
         displayName: "Run Valgrind's datarace detector (helgrind) on core-backend tests"
         failOnStderr: false
