--- a/core/electron/package.json
+++ b/core/electron/package.json
@@ -41,7 +41,7 @@
     "@itwin/core-common": "workspace:^3.5.0-dev.27",
     "@itwin/core-frontend": "workspace:^3.5.0-dev.27",
     "@itwin/presentation-common": "workspace:^3.5.0-dev.27",
-    "electron": ">=14.0.0 <18.0.0"
+    "electron": ">=14.0.0 <18.0.0 || >=22.0.0-beta.1"
   },
   "devDependencies": {
     "@itwin/build-tools": "workspace:*",
@@ -56,7 +56,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
     "chai": "^4.1.2",
-    "electron": "^17.0.0",
+    "electron": "^22.0.0-beta.1",
     "eslint": "^7.11.0",
     "mocha": "^10.0.0",
     "rimraf": "^3.0.2",
