--- a/example-code/app/package.json
+++ b/example-code/app/package.json
@@ -24,7 +24,7 @@
     "@itwin/core-electron": "workspace:*",
     "@itwin/core-frontend": "workspace:*",
     "@itwin/core-geometry": "workspace:*",
-    "electron": "^17.0.0"
+    "electron": "^22.0.0-beta.1"
   },
   "devDependencies": {
     "@itwin/build-tools": "workspace:*",
