--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -52,14 +52,14 @@
     "@types/node": "16.11.59",
     "@types/uuid": "^7.0.2",
     "@types/yargs": "^17.0.10",
-    "electron": "^17.0.0",
+    "electron": "^22.0.0-beta.1",
     "eslint": "^7.11.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "typescript": "~4.4.0"
   },
   "peerDependencies": {
-    "electron": ">=14.0.0 <18.0.0"
+    "electron": ">=14.0.0 <18.0.0 || >=22.0.0-beta.1"
   },
   "peerDependenciesMeta": {
     "electron": {
