--- a/common/config/azure-pipelines/templates/core-build.yaml
+++ b/common/config/azure-pipelines/templates/core-build.yaml
@@ -56,15 +56,15 @@ steps:
     displayName: "rush webpack:test (for rush cover)"
 
   # By default linux agents do not have a real display so use the virtual framebuffer
-  - script: xvfb-run --auto-servernum --server-args='-screen 0, 1600x900x24' node common/scripts/install-run-rush.js cover --verbose
+  - script: xvfb-run --auto-servernum --server-args='-screen 0, 1600x900x24' npm run cover
     displayName: rush cover
-    workingDirectory: ${{ parameters.workingDir }}
+    workingDirectory: ${{ parameters.workingDir }}/full-stack-tests/presentation
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
   # MacOS and Windows agents work without any virtual display
-  - script: node common/scripts/install-run-rush.js cover --verbose
+  - script: npm run cover
     displayName: rush cover
-    workingDirectory: ${{ parameters.workingDir }}
+    workingDirectory: ${{ parameters.workingDir }}/full-stack-tests/presentation
     condition: and(succeeded(), ne(variables['Agent.OS'], 'Linux'))
 
   - script: node common/scripts/install-run-rush.js docs
