--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -64,3 +64,9 @@ jobs:
   - template: ../templates/core-build.yaml
     parameters:
       nodeVersion: 16.13.0
+  # Will run if even there is a failure somewhere else in the pipeline.
+  - template: ../templates/publish-test-results.yaml
+    parameters:
+      NodeVersion: ${{ parameters.nodeVersion }}
+  # The publish script identifies any new packages not previously published and tags the build
+  - template: ../templates/publish.yaml
