--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -67,6 +67,6 @@ jobs:
   # Will run if even there is a failure somewhere else in the pipeline.
   - template: ../templates/publish-test-results.yaml
     parameters:
-      NodeVersion: ${{ parameters.nodeVersion }}
+      NodeVersion: 16.13.0
   # The publish script identifies any new packages not previously published and tags the build
   - template: ../templates/publish.yaml
