--- a/extensions/map-layers-formats/package.json
+++ b/extensions/map-layers-formats/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@itwin/map-layers-formats",
-  "version": "3.4.0-dev.7",
+  "version": "3.5.0-dev.27",
   "description": "Enables additional map-layers formats in iTwin.js",
   "main": "lib/cjs/map-layers-formats.js",
   "module": "lib/esm/map-layers-formats.js",
@@ -61,10 +61,10 @@
     "typescript": "~4.4.0"
   },
   "peerDependencies": {
-    "@itwin/appui-abstract": "workspace:^3.4.0-dev.7",
-    "@itwin/core-bentley": "workspace:^3.4.0-dev.7",
-    "@itwin/core-common": "workspace:^3.4.0-dev.7",
-    "@itwin/core-geometry": "workspace:^3.4.0-dev.7"
+    "@itwin/appui-abstract": "workspace:*",
+    "@itwin/core-bentley": "workspace:*",
+    "@itwin/core-common": "workspace:*",
+    "@itwin/core-geometry": "workspace:*"
   },
   "dependencies": {
     "google-protobuf": "~3.20.1"
