fix commit msg, 3.0.0 included for testing

--- a/common/config/azure-pipelines/templates/publish.yaml
+++ b/common/config/azure-pipelines/templates/publish.yaml
@@ -5,7 +5,7 @@ parameters:
 
 steps:
 - powershell: |
-    $commitMsg = $(Build.SourceVersionMessage)
+    $commitMsg = '$(Build.SourceVersionMessage)'
     Write-Host $commitMsg
     if ($commitMsg -match '^(\d+.\d+.\d+)(-dev.\d+)?$') {
       Write-Host `'$commitMsg`'` is a version bump
