--- a/common/config/azure-pipelines/jobs/ci-core.yaml
+++ b/common/config/azure-pipelines/jobs/ci-core.yaml
@@ -12,14 +12,14 @@ jobs:
         OS: windows-latest
         platform: Windows_NT
         name: $(win_pool)
-      # "Linux_${{ parameters.name }}":
-      #   OS: ubuntu-latest
-      #   platform: Linux
-      #   name: $(linux_pool)
-      # "MacOS_${{ parameters.name }}":
-      #   OS: macOS-latest
-      #   platform: Darwin
-      #   name: $(mac_pool)
+      "Linux_${{ parameters.name }}":
+        OS: ubuntu-latest
+        platform: Linux
+        name: $(linux_pool)
+      "MacOS_${{ parameters.name }}":
+        OS: macOS-latest
+        platform: Darwin
+        name: $(mac_pool)
 
   timeoutInMinutes: 120
 
@@ -29,37 +29,37 @@ jobs:
     clean: all
 
   steps:
-    # - checkout: self
-    #   clean: true
-    # - task: NodeTool@0
-    #   displayName: "Use Node ${{ parameters.nodeVersion }}"
-    #   inputs:
-    #     versionSpec: ${{ parameters.nodeVersion }}
-    #     checkLatest: true
+    - checkout: self
+      clean: true
+    - task: NodeTool@0
+      displayName: "Use Node ${{ parameters.nodeVersion }}"
+      inputs:
+        versionSpec: ${{ parameters.nodeVersion }}
+        checkLatest: true
 
-    # - script: |
-    #     git config --local user.email imodeljs-admin@users.noreply.github.com
-    #     git config --local user.name imodeljs-admin
-    #   displayName: git config
+    - script: |
+        git config --local user.email imodeljs-admin@users.noreply.github.com
+        git config --local user.name imodeljs-admin
+      displayName: git config
 
-    # - powershell: |
-    #     # Get the new version number.
-    #     $json = Get-Content -Raw -Path common/config/rush/version-policies.json | ConvertFrom-Json
-    #     $currVersion = $json[0].version
+    - powershell: |
+        # Get the new version number.
+        $json = Get-Content -Raw -Path common/config/rush/version-policies.json | ConvertFrom-Json
+        $currVersion = $json[0].version
 
-    #     $newBuildNumber = $currVersion + "_$(Build.BuildNumber)"
+        $newBuildNumber = $currVersion + "_$(Build.BuildNumber)"
 
-    #     Write-Host "##vso[build.updatebuildnumber]$newBuildNumber"
-    #   displayName: Set build number
-    #   condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+        Write-Host "##vso[build.updatebuildnumber]$newBuildNumber"
+      displayName: Set build number
+      condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
-    # - template: ../templates/core-build.yaml
-    #   parameters:
-    #     buildIos: ${{ parameters.buildIos}}
+    - template: ../templates/core-build.yaml
+      parameters:
+        buildIos: ${{ parameters.buildIos}}
 
-    # # Will run if even there is a failure somewhere else in the pipeline.
-    # - template: ../templates/publish-test-results.yaml
-    #   parameters:
-    #     NodeVersion: ${{ parameters.nodeVersion }}
-    # # The publish script identifies any new packages not previously published and tags the build
+    # Will run if even there is a failure somewhere else in the pipeline.
+    - template: ../templates/publish-test-results.yaml
+      parameters:
+        NodeVersion: ${{ parameters.nodeVersion }}
+    # The publish script identifies any new packages not previously published and tags the build
     - template: ../templates/publish.yaml
