--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -28,4 +28,4 @@ jobs:
     workingDir: $(Pipeline.Workspace)/itwinjs-core
     outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
     # shouldPublish: and(eq(variables['Build.Reason'], 'IndividualCI'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')))
-    shouldPublish: true
+    # shouldPublish: true
