--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -39,15 +39,18 @@ variables:
   octopusProjectName: iModel.js Documentation
 
 stages:
-  - template: ./jobs/docs/docs-build.yaml
-    parameters:
-      workingDir: $(Pipeline.Workspace)/itwinjs-core
-      outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-      # shouldPublish: and(eq(variables['Build.Reason'], 'IndividualCI'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')))
-      shouldPublish: true
+  - stage: Build
+    displayName: Build Docs
+    jobs:
+    - template: ./jobs/docs/docs-build.yaml
+      parameters:
+        workingDir: $(Pipeline.Workspace)/itwinjs-core
+        outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+        shouldPublish: true
 
   - stage: CreateRelease
     displayName: Create release
+    dependsOn: Build
     jobs:
     - template: ./jobs/docs/package-docs.yaml
 
