Revert "use new pool for product tests"
This reverts commit f3e23a0037a8f5b0810ed8c0b2431fbfb97b1452.

--- a/common/config/azure-pipelines/jobs/docs/product-tests.yaml
+++ b/common/config/azure-pipelines/jobs/docs/product-tests.yaml
@@ -9,9 +9,7 @@ parameters:
 jobs:
 - job: ProductTests_${{ parameters.env }}
   pool:
-    # name: SecurityScans
-    # demands: Agent.OS -equals Windows_NT
-    name: iModelTechCI
+    name: SecurityScans
     demands: Agent.OS -equals Windows_NT
 
   variables:
