--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -40,52 +40,52 @@ variables:
   octopusProjectName: iModel.js Documentation
 
 stages:
-  # - stage: Build
-  #   displayName: Build Docs
-  #   jobs:
-  #   - template: ./jobs/docs/docs-build.yaml
-  #     parameters:
-  #       workingDir: $(Pipeline.Workspace)/itwinjs-core
-  #       outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-  #       shouldPublish: true
+  - stage: Build
+    displayName: Build Docs
+    jobs:
+    - template: ./jobs/docs/docs-build.yaml
+      parameters:
+        workingDir: $(Pipeline.Workspace)/itwinjs-core
+        outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+        shouldPublish: true
 
-  # - stage: CreateRelease
-  #   displayName: Create release
-  #   dependsOn: Build
-  #   jobs:
-  #   - template: ./jobs/docs/package-docs.yaml
+  - stage: CreateRelease
+    displayName: Create release
+    dependsOn: Build
+    jobs:
+    - template: ./jobs/docs/package-docs.yaml
 
-  # - stage: DEV
-  #   displayName: Deployment (DEV)
-  #   dependsOn: CreateRelease
-  #   jobs:
-  #   - template: ./jobs/docs/deploy-docs.yaml
-  #     parameters:
-  #       variableGroup: iTwin.js Docs - DEV
+  - stage: DEV
+    displayName: Deployment (DEV)
+    dependsOn: CreateRelease
+    jobs:
+    - template: ./jobs/docs/deploy-docs.yaml
+      parameters:
+        variableGroup: iTwin.js Docs - DEV
 
-  # - stage: ProductTestsDEV
-  #   displayName: Product Tests (DEV)
-  #   dependsOn: DEV
-  #   jobs:
-  #   - template: ./jobs/docs/product-tests.yaml
-  #     parameters:
-  #       env: Development
+  - stage: ProductTestsDEV
+    displayName: Product Tests (DEV)
+    dependsOn: DEV
+    jobs:
+    - template: ./jobs/docs/product-tests.yaml
+      parameters:
+        env: Development
 
-  # - stage: QA
-  #   displayName: Deployment (QA)
-  #   dependsOn: ProductTestsDEV
-  #   jobs:
-  #   - template: ./jobs/docs/deploy-docs.yaml
-  #     parameters:
-  #       variableGroup: iTwin.js Docs - QA
+  - stage: QA
+    displayName: Deployment (QA)
+    dependsOn: ProductTestsDEV
+    jobs:
+    - template: ./jobs/docs/deploy-docs.yaml
+      parameters:
+        variableGroup: iTwin.js Docs - QA
 
-  # - stage: ProductTestsQA
-  #   displayName: Product Tests (QA)
-  #   dependsOn: QA
-  #   jobs:
-  #   - template: ./jobs/docs/product-tests.yaml
-  #     parameters:
-  #       env: QA
+  - stage: ProductTestsQA
+    displayName: Product Tests (QA)
+    dependsOn: QA
+    jobs:
+    - template: ./jobs/docs/product-tests.yaml
+      parameters:
+        env: QA
 
   # - stage: LinkValidatorQA
   #   displayName: Link Validator (QA)
@@ -110,7 +110,7 @@ stages:
 
   - stage: Scorecard
     displayName: Scorecard
-    # dependsOn: ProductTestsQA
+    dependsOn: ProductTestsQA
     jobs:
     - template: templates/scorecard/docs-scorecard.yaml@build-pipeline-scripts
       parameters:
