--- a/extensions/map-layers/package.json
+++ b/extensions/map-layers/package.json
@@ -85,9 +85,9 @@
     "typescript": "~4.4.0"
   },
   "dependencies": {
+    "@itwin/itwinui-icons-color-react": "~1.0.3",
     "classnames": "^2.3.1",
-    "react-beautiful-dnd": "^13.0.0",
-    "@itwin/itwinui-icons-color-react": "~1.0.3"
+    "react-beautiful-dnd": "^13.0.0"
   },
   "peerDependencies": {
     "@itwin/core-bentley": "workspace:^3.5.0-dev.32",
