--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -55,7 +55,7 @@ stages:
       parameters:
         shortCode: $(ShortCode)
         gprId: $(GprId)
-        suppressionFilePath: common\config\azure-pipelines\credscan\credscan-supressions.json
+        suppressionFilePath: $(Pipeline.Workspace)/s/common/config/azure-pipelines/credscan/credscan-supressions.json
 
   - stage: CreateRelease
     displayName: Create release
