ArcGIS Feature services using Canvas (#3900)
* WIP

* Added support for 512 pixels.  Fixed issue with point icon positioning.

* Improved requests and support for coordinates quantization

* Added PDF support

* Add polygons support

* Added support for multi-points. Also check for Z, M coordinate.

* Improved support of JSON, code refactoring.

* New feature and symbology renderers.  Read server / layer metadata. Fixed lint errors.  Added logging.

* Read formats from layer metadata, genreal code improvement.

* Reads 'supportsCoordinatesQuantization' from layer metadata.

* Improved JSON support for requests exceeding data transfert.

* Added ArcGIS features to MapUrlDialog.

* Moved ArcGis Feature code in a new 'map-layers-formats' package.

* Fixed incorrectly edited Readme.md

* Renamed FeatureCollectionGenerated to esriPBuffer.gen.ts.  Clean-up exports in map-layers-formats.ts

* Disabled lint errors for generated code

* fixed more lint errors

* Added support for min/max LOD, revisted the way layer metadata is read, and improved testing.

* Added support for GetFeatureInfo

* Added tool for adding ArcGIS feature map-layer

* Added map-layers-formats package to display-test-app

* Fix issue discovering the ArcGIS info URL with ArcGIS online.  Added 'forceLeacyToken' switch to ArcGisAccessClient

* Fix WmsCapabilities parsing with basic auth.

* Added Oauth2 support for ArcGIS feature provider.  Providers now use the fetch API instead of super agent. Fix arious issues with authentication handling.

* Minimal support for unique value renderer, and make sure to provide default symbology for any unsupported symbology.

* Added missing geometry type definitions

* Code clean up.

* Set  accessClient in map-layer registry when ui-test-app initializes

* Added tests.  Code refactoring/cleanup.

* Improved tests.  Fixed issues reading date properties from GetFeatureInfo.  Added documentation.  Revisited Featur

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -225,6 +225,23 @@
         "${workspaceFolder}/extensions/map-layers-auth/lib/**/*.js"
       ]
     },
+    {
+      "name": "MapLayers Formats Tests",
+      "presentation": {
+        "group": "0_CoreTests",
+        "order": 1
+      },
+      "cwd": "${workspaceFolder}/extensions/map-layers-formats/",
+      "type": "pwa-node",
+      "request": "launch",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+        "test"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/extensions/map-layers-formats/lib/**/*.js"
+      ]
+    },
     { /* PARTIAL */
       "name": "[NODE] Certa Test Runner for Frontend Tests",
       "presentation": {
