exclude old links, run both stages in parallel

--- a/common/config/azure-pipelines/cd-docs.yaml
+++ b/common/config/azure-pipelines/cd-docs.yaml
@@ -128,6 +128,7 @@ stages:
   - stage: UpdateDocumentationIndexQA
     displayName: Update Documentation Index (QA)
     # dependsOn: QA
+    dependsOn: []
     jobs:
     - template: ./jobs/docs/update-docs-index.yaml
       parameters:
