--- a/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
+++ b/common/config/azure-pipelines/jobs/docs/update-docs-index.yaml
@@ -23,13 +23,13 @@ jobs:
       filePattern: algolia.json
       secretTokens: AlgoliaApiKey:$(AlgoliaApiKey)
 
-  - task: qetza.replacetokens.replacetokens-task.replacetokens@3
-    displayName: Replace tokens in algolia.json
-    inputs:
-      targetFiles: $(bemetalsmithAlgoliaDir)/algolia.json
-      tokenPattern: custom
-      tokenPrefix: __
-      tokenSuffix: __
+  # - task: qetza.replacetokens.replacetokens-task.replacetokens@3
+  #   displayName: Replace tokens in algolia.json
+  #   inputs:
+  #     targetFiles: $(bemetalsmithAlgoliaDir)/algolia.json
+  #     tokenPattern: custom
+  #     tokenPrefix: __
+  #     tokenSuffix: __
 
   - task: NodeTool@0
     displayName: Use node 12.15.x
@@ -46,7 +46,7 @@ jobs:
     displayName: npm run deleteOldDocsIndex
     inputs:
       command: custom
-      customCommand: deleteOldDocsIndex
+      customCommand: run deleteOldDocsIndex
       workingDir: $(bemetalsmithAlgoliaDir)
 
 
@@ -54,5 +54,5 @@ jobs:
     displayName: npm run uploadNewDocsIndex
     inputs:
       command: custom
-      customCommand: uploadNewDocsIndex
+      customCommand: run uploadNewDocsIndex
       workingDir: $(bemetalsmithAlgoliaDir)
