node version clarifications

--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -30,7 +30,8 @@ jobs:
   - template: ci-core.yaml
     parameters:
       name: Node_18
-      nodeVersion: 18.12.0
+      nodeVersion: 18.12.x
+      buildIos: true
       pool:
         name: $(name)
         demands:
