First implementation of Briefcase button

--- a/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
+++ b/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.github.itwin:mobile-native-android:3.5.5'
+    implementation 'androidx.webkit:webkit:1.4.0'
 }
