--- a/core/express-server/package.json
+++ b/core/express-server/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/cjs/ExpressServer",
   "license": "MIT",
   "engines": {
-    "node": ">=12.22.0 < 14.0 || >=14.17.0 <17.0 || >= 18.0 < 19.0"
+    "node": ">=12.22.0 < 14.0 || >=14.17.0 < 19.0"
   },
   "scripts": {
     "build": "npm run -s build:cjs",
