replace abandoned istanbul-instrumenter-loader\

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -471,6 +471,14 @@
       "allowedCategories": [ "internal" ]
     },
     {
+      "name": "babel-loader",
+      "allowedCategories": [ "internal" ]
+    },
+    {
+      "name": "babel-plugin-istanbul",
+      "allowedCategories": [ "internal" ]
+    },
+    {
       "name": "benchmark",
       "allowedCategories": [ "backend", "common" ]
     },
