both instrumented and uninstrumented webpack tests

--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -74,6 +74,7 @@
     "@types/semver": "7.3.10",
     "@types/superagent": "^4.1.14",
     "@types/sinon": "^9.0.0",
+    "babel-loader": "~8.2.5",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
     "cpx2": "^3.0.0",
