--- a/core/markup/package.json
+++ b/core/markup/package.json
@@ -58,6 +58,7 @@
     "@types/chai": "4.3.1",
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
+    "babel-loader": "~8.2.5",
     "chai": "^4.1.2",
     "cpx2": "^3.0.0",
     "eslint": "^7.11.0",
