--- a/core/webgl-compatibility/package.json
+++ b/core/webgl-compatibility/package.json
@@ -45,6 +45,7 @@
     "@types/chai": "4.3.1",
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
+    "babel-loader": "~8.2.5",
     "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "glob": "^7.1.2",
