add babel-plugin-instabul to necessary pkgs; readd comment re: multiple webpack runs

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -476,7 +476,7 @@
     },
     {
       "name": "babel-plugin-istanbul",
-      "allowedCategories": [ "internal" ]
+      "allowedCategories": [ "frontend", "internal" ]
     },
     {
       "name": "benchmark",
