--- a/core/hypermodeling/package.json
+++ b/core/hypermodeling/package.json
@@ -54,6 +54,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
     "babel-loader": "~8.2.5",
+    "babel-plugin-istanbul": "~6.1.1",
     "chai": "^4.1.2",
     "cpx2": "^3.0.0",
     "eslint": "^7.11.0",
