--- a/core/webgl-compatibility/package.json
+++ b/core/webgl-compatibility/package.json
@@ -46,6 +46,7 @@
     "@types/mocha": "^8.2.2",
     "@types/node": "16.11.59",
     "babel-loader": "~8.2.5",
+    "babel-plugin-istanbul": "~6.1.1",
     "chai": "^4.1.2",
     "eslint": "^7.11.0",
     "glob": "^7.1.2",
