--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -29,7 +29,7 @@ RUN \
   sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)" \
   && git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf \
   && ~/.fzf/install --all \
-  && mkdir -p /workspace/imodeljs
+  && mkdir -p /workspace/itwinjs-core
 
-WORKDIR /workspace/imodeljs
+WORKDIR /workspace/itwinjs-core
 CMD ["/usr/bin/zsh"]
