build on ubuntu

--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -23,8 +23,9 @@ jobs:
     workspace:
       clean: all
     pool:
-      name: iModelTechCI
-      demands: Agent.OS -equals Windows_NT
+      # name: iModelTechCI
+      # demands: Agent.OS -equals Windows_NT
+      vmImage: ubuntu-latest
 
     steps:
       - checkout: self
