build on windows

--- a/common/config/azure-pipelines/jobs/docs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-build.yaml
@@ -23,9 +23,8 @@ jobs:
     workspace:
       clean: all
     pool:
-      # name: iModelTechCI
-      # demands: Agent.OS -equals Windows_NT
-      vmImage: ubuntu-latest
+      name: iModelTechCI
+      demands: Agent.OS -equals Windows_NT
 
     steps:
       - checkout: self
